fixed overflow error

--- a/src/client/src/app/help/help.component.scss
+++ b/src/client/src/app/help/help.component.scss
@@ -1,5 +1,5 @@
 .sidenav-container {
-  height: 100%;
+	flex-grow: 1;
 }
 
 .sidenav {
